--- a/src/app/pieces/tasks/final-task/final-task.component.scss
+++ b/src/app/pieces/tasks/final-task/final-task.component.scss
@@ -111,6 +111,7 @@
         border-left: none;
         display: flex;
         flex-direction: row;
+        padding-left: 2px;
 
         &-title {
             margin-left: auto;
