--- a/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
+++ b/src/app/pieces/tasks/annexe-task/annexe-task.component.scss
@@ -65,6 +65,7 @@
         border-left: none;
         display: flex;
         flex-direction: row;
+        padding-left: 2px;
 
         &-title {
             margin-left: auto;
