--- a/src/app/pieces/tasks/random-event/random-event.component.scss
+++ b/src/app/pieces/tasks/random-event/random-event.component.scss
@@ -102,6 +102,7 @@
         border-left: none;
         display: flex;
         flex-direction: row;
+        padding-left: 2px;
 
         &-title {
             margin-left: auto;
