--- a/src/app/sider-pieces/comments/comments.component.html
+++ b/src/app/sider-pieces/comments/comments.component.html
@@ -1,4 +1,6 @@
-<div class="piece">
+<div class="piece"
+matTooltip="Permet de rajouter des commentaires sur une tuile"
+matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
     <div class="piece-form">
         <div class="piece-form-title">Commentaires</div>
 
