--- a/src/app/sider-pieces/interupt/interupt.component.html
+++ b/src/app/sider-pieces/interupt/interupt.component.html
@@ -1,4 +1,6 @@
-<div class="piece">
+<div class="piece"
+matTooltip="Une tâche peut être interrompue par un autre rôle, ceci est plutôt utilisé dans les compétitifs"
+matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
     <div class="piece-form">
         <div class="piece-form-header">
             <mat-icon fontIcon="front_hand"></mat-icon>
