--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -166,7 +166,7 @@
 
     &-settings {
         position: fixed;
-        width: 300px;
+        width: 400px;
         right: 350px;
         display: flex;
         flex-direction: row;
@@ -174,7 +174,7 @@
         z-index: 2;
 
         &-mode {
-            width: 150px;
+            width: 120px;
             background-color: white;
             box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2), 0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
             padding: 5px;
@@ -187,4 +187,8 @@
             height: 50px;
         }
     }
+}
+
+::ng-deep .mat-tooltip {
+    font-size: 13px;
 }
