--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -13,15 +13,19 @@
     <div class="piece-form">
         <div class="piece-form-title">{{role.intitule ? role.intitule : 'Role '+(i+1)}}</div>
         <mat-icon class="piece-form-comment" fontIcon="comment" *ngIf="role.comments.length > 0"></mat-icon>
-        <img src="../../../assets/background-images/role_opacity0.png" *ngIf="i == 0"/>
-        <img src="../../../assets/background-images/role2_opacity0.png" *ngIf="i == 1"/>
+        <img src="../../../assets/background-images/role_opacity0.png" draggable="false" *ngIf="i == 0"/>
+        <img src="../../../assets/background-images/role2_opacity0.png" draggable="false" *ngIf="i == 1"/>
         <div class="piece-form-intitule">
             <label for="intitule">Intitulé</label>
-            <input name="intitule" type="text" [(ngModel)]="role.intitule" placeholder="Développeur/euse web"/>   
+            <input name="intitule" type="text" [(ngModel)]="role.intitule" placeholder="Développeur/euse web"
+            matTooltip="Nom de ce rôle."
+            matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>   
         </div>
         <div class="piece-form-name">
             <label for="name">Nom de la quête</label>
-            <input name="name" type="text" [(ngModel)]="role.questName" placeholder="Intégration de site web"/>   
+            <input name="name" type="text" [(ngModel)]="role.questName" placeholder="Intégration de site web"
+            matTooltip="En 2-3 mots, l'intitulé de la quête de ce rôle"
+            matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>   
         </div>
         <div class="piece-form-description">
             <label for="description">Description</label>
@@ -30,7 +34,9 @@
         <div class="piece-form-objectives">
             <label for="objective">Objectif(s) pédagoqique(s)</label>
             <div class="piece-form-objectives-objective" *ngFor="let objective of role.educationnalObjectives, let i = index">
-                <input name="objective" type="text" [(ngModel)]="role.educationnalObjectives[i].objective" placeholder="Nom de l'objectif"/>
+                <input name="objective" type="text" [(ngModel)]="role.educationnalObjectives[i].objective" placeholder="Nom de l'objectif"
+                matTooltip="Les objectifs visés pour ce rôle en particulier"
+                matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>
                 <button mat-button *ngIf="role.educationnalObjectives.length > 1" (click)="removeEducationnalObjective(i)"><mat-icon fontIcon="remove"></mat-icon></button>
             </div>
             <button mat-button class="piece-form-objectives-add" (click)="addEducationnalObjective()"><mat-icon fontIcon="add"></mat-icon></button>
@@ -40,7 +46,9 @@
             <div class="piece-form-rewards-reward" *ngFor="let reward of role.rewards, let i = index">
                 <div class="piece-form-rewards-reward-type">
                     <label>Type</label>
-                    <select [(ngModel)]="reward.type" (change)="changeRewardType(i, reward.type)">
+                    <select [(ngModel)]="reward.type" (change)="changeRewardType(i, reward.type)"
+                    matTooltip="Ce que le rôle va obtenir à la fin de sa quête (gagner en compétence, gagner un objet, débloquer une quête, …)"
+                    matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips">
                         <option value="quest">Débuter une nouvelle quête</option>
                         <option value="skill">Travailler un champ de compétence</option>
                         <option value="character">Récupérer le contact d'un PNJ</option>
@@ -114,7 +122,9 @@
             <div class="piece-form-title">Personnalisation</div>
             <div class="piece-form-personnalization-appearance">
                 <label>Apparence, équipement</label>
-                <textarea [(ngModel)]="role.stuff"></textarea>
+                <textarea [(ngModel)]="role.stuff"
+                matTooltip="Si le rôle a une tenue particulière ou des objets spécifiques"
+                matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
             </div>
         </div>
 
@@ -147,7 +157,9 @@
                 <div>
                     <div class="piece-form-supplementary-form-name">
                         <label for="name">Nom</label>
-                        <input name="name" type="text" [(ngModel)]="supplementaryRole.name"/>
+                        <input name="name" type="text" [(ngModel)]="supplementaryRole.name"
+                        matTooltip="Intitulé du rôle supplémentaire"
+                        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"/>
                     </div>
                     <div class="piece-form-supplementary-form-color">
                         <label for="color">Couleur</label>
@@ -155,15 +167,21 @@
                     </div>
                     <div class="piece-form-supplementary-form-textarea">
                         <label for="objectives">Objectifs</label>
-                        <textarea name="objectives" [(ngModel)]="supplementaryRole.objectives"></textarea>
+                        <textarea name="objectives" [(ngModel)]="supplementaryRole.objectives"
+                        matTooltip="Objectifs (pédagogiques) de ce rôle supplémentaire"
+                        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
                     </div>
                     <div class="piece-form-supplementary-form-textarea">
                         <label for="skills">Compétences</label>
-                        <textarea name="skills" [(ngModel)]="supplementaryRole.skills"></textarea>
+                        <textarea name="skills" [(ngModel)]="supplementaryRole.skills"
+                        matTooltip="Compétences spécifiques à ce rôle pour effectuer les tâches qui lui seront liées (même couleur)"
+                        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
                     </div>
                     <div class="piece-form-supplementary-form-textarea">
                         <label for="rules">Règles</label>
-                        <textarea name="rules" [(ngModel)]="supplementaryRole.rules"></textarea>
+                        <textarea name="rules" [(ngModel)]="supplementaryRole.rules"
+                        matTooltip="Règles spécifiques à ce rôle (a-t-il des contraintes ou des droits, accès supplémentaires ?)"
+                        matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips"></textarea>
                     </div>
                     <button mat-button (click)="removeSupplementaryRole(i)"><mat-icon fontIcon="remove"></mat-icon></button>
                 </div>
