--- a/src/app/sider-pieces/repeat/repeat.component.html
+++ b/src/app/sider-pieces/repeat/repeat.component.html
@@ -1,4 +1,6 @@
-<div class="piece">
+<div class="piece"
+matTooltip="Une tâche peut-être répétée un certain nombre de fois avant d'être résolue"
+matTooltipPosition="before" [matTooltipDisabled]="!tooltipService.activatedTooltips">
     <div class="piece-form">
         <div class="piece-form-header">
             <mat-icon fontIcon="refresh"></mat-icon>
